feat: 회의실 예약 시스템 구현
- 동일 방 시간 겹침 방지
- Docker Compose 실행 환경 구성