@@ -2,7 +2,7 @@ package com.room_reservation.service;
 
 import com.room_reservation.domain.Reservation;
 import com.room_reservation.domain.Room;
-import com.room_reservation.dto.AvailabilityDto;
+import com.room_reservation.dto.AvailabilityResponse;
 import com.room_reservation.repository.ReservationRepository;
 import com.room_reservation.repository.RoomRepository;
 import lombok.RequiredArgsConstructor;
@@ -14,7 +14,6 @@ import java.time.ZoneOffset;
 import java.util.ArrayList;
 import java.util.Comparator;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -22,38 +21,44 @@ public class AvailabilityService {
     private final RoomRepository roomRepository;
     private final ReservationRepository reservationRepository;
 
-    public List<AvailabilityDto> getDaily(LocalDate date) {
+    public List<AvailabilityResponse> getDaily(LocalDate date) {
         OffsetDateTime dayStart = date.atStartOfDay().atOffset(ZoneOffset.UTC);
         OffsetDateTime dayEnd = dayStart.plusDays(1);
 
         List<Room> rooms = roomRepository.findAll();
-        List<AvailabilityDto> result = new ArrayList<>();
+        List<AvailabilityResponse> result = new ArrayList<>();
         for (Room room : rooms) {
+            // 해당 날짜 예약 현황/빈 시간대 조회
             List<Reservation> reservations = reservationRepository.findByRoomAndStartAtBetween(room, dayStart, dayEnd)
                     .stream()
                     .sorted(Comparator.comparing(Reservation::getStartAt))
-                    .collect(Collectors.toList());
+                    .toList();
 
-            List<AvailabilityDto.TimeRange> reserved = new ArrayList<>();
-            for (Reservation r : reservations) {
-                reserved.add(new AvailabilityDto.TimeRange(r.getStartAt(), r.getEndAt()));
+            // 예약된 시간대 목록 생성
+            List<AvailabilityResponse.TimeRange> reserved = new ArrayList<>();
+            for (Reservation reservation : reservations) {
+                reserved.add(new AvailabilityResponse.TimeRange(reservation.getStartAt(), reservation.getEndAt()));
             }
 
-            List<AvailabilityDto.TimeRange> free = new ArrayList<>();
-            OffsetDateTime cursor = dayStart;
-            for (AvailabilityDto.TimeRange tr : reserved) {
-                if (cursor.isBefore(tr.startAt)) {
-                    free.add(new AvailabilityDto.TimeRange(cursor, tr.startAt));
+            //예약된 시간 사이 빈 구간 조회
+            List<AvailabilityResponse.TimeRange> free = new ArrayList<>();
+            OffsetDateTime currTime = dayStart;
+            for (AvailabilityResponse.TimeRange timeRange : reserved) {
+                // 현재 시간과 예약 시작 사이에 빈 시간이 있으면 추가
+                if (currTime.isBefore(timeRange.startAt())) {
+                    free.add(new AvailabilityResponse.TimeRange(currTime, timeRange.startAt()));
                 }
-                if (cursor.isBefore(tr.endAt)) {
-                    cursor = tr.endAt;
+                // 현재 시간을 예약 종료 시점으로 이동
+                if (currTime.isBefore(timeRange.endAt())) {
+                    currTime = timeRange.endAt();
                 }
             }
-            if (cursor.isBefore(dayEnd)) {
-                free.add(new AvailabilityDto.TimeRange(cursor, dayEnd));
+            // 마지막 예약 이후 남은 시간이 있으면 추가
+            if (currTime.isBefore(dayEnd)) {
+                free.add(new AvailabilityResponse.TimeRange(currTime, dayEnd));
             }
 
-            result.add(new AvailabilityDto(
+            result.add(new AvailabilityResponse(
                     room.getId(),
                     room.getName(),
                     room.getLocation(),
